fix footer spacing to rem units

--- a/src/sass/global/global.sass
+++ b/src/sass/global/global.sass
@@ -37,6 +37,7 @@
     transition: 0.3s ease
     display: block
     width: max-content
+    cursor: pointer
 
     margin: 30px 0
 
@@ -64,8 +65,6 @@
 .section-subheader
     font-size: 1.7rem
     color: #353535
-    // margin-bottom: 2em
-
 
 .section-container 
     display: flex
@@ -185,6 +184,7 @@
     width: 100%
 
     .overlay
+        display: flex
         position: absolute
         top: 0
         left: 0
@@ -215,14 +215,14 @@
         margin-bottom: 2em
 
     .form-container 
-        padding: 2.5em 1.9em
+        padding: 2.5rem 1.9rem
         background: rgba(255, 255, 255, 0.03)
         backdrop-filter: blur(3px)
         width: 450px
         height: auto
 
         input[type=text], textarea
-            font-size: 1.1rem
+            font-size: 1rem
             color: $cWhite
 
         input, textarea 
@@ -232,13 +232,13 @@
             outline: none
             border: none
             border-bottom: 2px solid $cWhite
-            padding: 15px 0
+            padding: 1rem 0
             margin-bottom: 10px
             resize: none
 
         input::placeholder, textarea::placeholder
             height: 40px
-            font-size: 1.1rem
+            font-size: 1rem
             color: $cWhite
             font-family: 'Montserrat', sans-serif
 
